# algencode

./: README.md  out.txt  pyproject.toml  test.py
algencode/: __init__.py  __main__.py  base_node.py  common.py  node.py  types.py  utils.py
algencode/data/: __init__.py  amador.py  common.py  imperial.py  kern.py  los_angeles.py  madera.py  merced.py  orange.py  riverside.py  san_bernardino.py  san_diego.py  santa_clara.py  yolo.py
algencode/subnodes/: __init__.py  base_node.py  branch_node.py  number_node.py  proc_node.py  string_node.py  variable_node.py
tests/: __init__.py  common.py  test_compound.py  test_numeric.py  test_parse.py  test_string.py
