[tool.poetry]
name = "algencode"
version = "0.1.5"
description = ""
authors = ["Nils Olsson <nilso@enosis.net>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pylama = "^8.3.8"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
# typeCheckingMode = "strict"
reportUnusedCallResult = false
reportImplicitStringConcatenation = false
reportCallInDefaultInitializer = true
reportUnnecessaryCast = true

[tool.black]
line-length = 90

[tool.isort]
profile = "black"
multi_line_output = 3  # 3/5: less/more compact
line_length = 90
